crates/printer/src/operation_type_printer/tests/snapshots/nitrogql_printer__operation_type_printer__tests__typename_field_on_union.snap
---
source: crates/printer/src/operation_type_printer/tests/mod.rs
expression: printed
---
import type { TypedDocumentNode } from "@graphql-typed-document-node/core";
import type * as Schema from "";

type Result = Schema.__SelectionSet<Schema.__OperationOutput.Query, {
  me: Schema.__SelectionSet<Schema.__OperationOutput.User, {
    posts: (Schema.__SelectionSet<Schema.__OperationOutput.User, {
      __typename: "User";
      id: Schema.__OperationOutput.ID;
    }, {}> | Schema.__SelectionSet<Schema.__OperationOutput.Bot, {
      __typename: "Bot";
      id: Schema.__OperationOutput.ID;
    }, {}> | Schema.__SelectionSet<Schema.__OperationOutput.Post, {
      __typename: "Post";
      id: Schema.__OperationOutput.ID;
      title: Schema.__OperationOutput.String;
    }, {}> | Schema.__SelectionSet<Schema.__OperationOutput.Tweet, {
      __typename: "Tweet";
      id: Schema.__OperationOutput.ID;
    }, {}>)[];
  }, {}>;
}, {}>;

type Variables = {};

declare const Query: TypedDocumentNode<Result, Variables>;

export { Query as default };


